# Inceptrix

./: .gitignore  README.md  package.json
AI Chat Bot/: .gitignore
AI Chat Bot/templates/: index.html
AegisKYC/: .env  .env.example  CONFIG.md  README.md  SECURITY_ENCRYPTION_FLOW.md
AegisKYC/backend/: requirements.txt
apexbank-landing-page (1)/: .gitignore  ENV_VARIABLES.md  ENV_WHERE_TO_GET.md  OAUTH_SETUP.md  README.md  README_MONGODB.md  SETUP.md  STRUCTURE.md  package-lock.json  package.json  start-db.bat
apexbank-landing-page (1)/backend/: index.js  package-lock.json  package.json
apps/server/: .gitignore  main.py  (+2 more)
policy sync/policy-sync model/: .gitignore  INTEGRATION_GO.md  Makefile  PRODUCTION_READINESS.md  README.md  pyproject.toml  requirements.txt
policy sync/policy-sync model/.cache/: embeddings.db  test_emb.db
policy sync/policy-sync model/.github/workflows/: ci.yml
policy sync/policy-sync model/app/: main.py
policy sync/policy-sync model/src/reggenai/: __init__.py  agents.py  audit.py  chroma_retriever.py  clauses.py  db.py  diff.py  diffgen.py  embeddings.py  ingest.py  llm.py  mapping.py  models.py  pipeline.py  retriever.py  utils.py
policy sync/policy-sync model/src/reggenai.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
policy sync/policy-sync model/tests/: test_agents.py  test_apply_workflow.py  test_audit_logging.py  test_clauses.py  test_cross_critique.py  test_db_endpoints.py  test_diff.py  test_e2e_cases.py  test_embeddings.py  test_mapping_and_diff.py  test_prompt_examples.py  test_simulate_diff.py
(+184 files in other folders)
